# snatch-technique-evaluator

./: .gitignore  AGENTS.md  README.md  pyproject.toml
snatch_technique_evaluator/: __init__.py  analysis.py  app.py  tracking.py
snatch_technique_evaluator/pose_backends/: __init__.py  base.py  openpose_backend.py  yolo_backend.py
snatch_technique_evaluator/references/: default_reference.json
snatch_technique_evaluator/ui/: __init__.py  analysis_config.py  comparison_view.py  design_system.py  home_screen.py  results_dashboard.py
